Clean: playing around with snake background graphic.

--- a/clean-website/style.css
+++ b/clean-website/style.css
@@ -7,9 +7,9 @@
 
 :root {
     --nav-height: 60px; /* Adjust this value based on your navigation menu height */
-    --primary-color: #FF964F;
-    --secondary-color: #8daef4;
-    --text-color: #fff1c1;
+    --primary-color: #e6ffd6;
+    --secondary-color: #fd7f17;
+    --text-color: #3bb31e;
 }
 
 /* Global styles */
@@ -35,11 +35,12 @@ nav {
     background-color: var(--primary-color);
     padding: 1rem;
     position: fixed;
+    font-size: 1.25rem;
     top: 0;
     left: 0;
     right: 0;
     z-index: 999;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.5);
 }
 
 nav ul {
@@ -72,6 +73,7 @@ nav ul li a:hover {
     opacity: 0;
     transition: opacity 0.8s ease;
     position: absolute;
+    z-index: 1;
     top: 0;
     left: 0;
     right: 0;
@@ -125,7 +127,7 @@ nav ul li a:hover {
 
 .section h1 {
     justify-content: center;
-    font-size: 3rem;
+    font-size: 5rem;
     margin-bottom: 1rem;
 }
 
@@ -133,28 +135,23 @@ nav ul li a:hover {
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 100%;
-    padding: 1rem 0;
-    background-color: var(--text-color);
-    color: var(--primary-color);
-    font-size: 2rem;
+    font-size: 4rem;
     margin-bottom: 1.5rem;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.5);
 }
 
 .section h3 {
     text-decoration: underline;
-    font-size: 1.5rem;
+    font-size: 2rem;
     margin-bottom: 0.5rem;
 }
 
 .section h4 {
-    font-size: 1.25rem;
+    font-size: 2rem;
     margin-bottom: 0.5rem;
 }
 
 .section p {
-    font-size: 1rem;
+    font-size: 1.25rem;
     margin-bottom: 0.5rem;
 }
 
@@ -197,4 +194,20 @@ footer {
 .tab {
     position: relative;
     z-index: 1;
+}
+
+#snake {
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 998;
+}
+
+.snake-body {
+    width: 20px;
+    height: 20px;
+    background-color: black;
+    position: absolute;
+    top: 0;
+    left: 0;
 }
