--- a/clean-website/style.css
+++ b/clean-website/style.css
@@ -21,16 +21,6 @@ body {
     height: auto; /* Change from a fixed height to auto */
 }
 
-.hero-content h1,
-.hero-content h2,
-.hero-content p {
-    color: var(--text-color);
-}
-
-.hero-content h1 {
-    text-shadow: 1px 1px 2px rgba(250, 150, 3, 0.52);
-}
-
 /* Navigation styles */
 nav {
     background-color: var(--primary-color);
@@ -40,7 +30,7 @@ nav {
     top: 0;
     left: 0;
     right: 0;
-    z-index: 999;
+    z-index: 5;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.5);
 }
 
@@ -80,58 +70,11 @@ nav ul li a:hover {
     right: 0;
     padding-top: 80px; /* Adjust this value based on the height of your navigation menu */
     padding-bottom: 2rem; /* Add padding to create space for the footer */
+    color: var(--text-color);
 }
 
 .section.active {
     opacity: 1;
-}
-
-
-.section-container {
-    position: relative;
-    padding-top: var(--nav-height);
-    padding-bottom: 2rem;
-    transition: height 0.8s ease;
-}
-
-.hero-content {
-    text-align: justify;
-    max-width: 800px;
-    padding: 1rem;
-    /*margin-top: calc(var(--nav-height) + 200px); !* Adjust the extra space (20px) as needed *!*/
-}
-
-.about-content {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-}
-
-.about-image {
-    flex: 1;
-    display: flex;
-    justify-content: flex-start;
-    margin-right: 2rem;
-}
-
-.about-image img {
-    width: 200px;
-    height: 200px;
-    border-radius: 50%;
-    object-fit: cover;
-    border: 10px solid var(--text-color);
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-}
-
-.about-text {
-    flex: 2;
-    text-align: justify;
-}
-
-.hero-main-content {
-    text-align: center;
-    max-width: 800px;
-    padding: 2rem;
 }
 
 .section h1 {
@@ -164,12 +107,85 @@ nav ul li a:hover {
     margin-bottom: 0.5rem;
 }
 
+.hero-content {
+    text-align: justify;
+    max-width: 800px;
+    padding: 1rem;
+}
+
+.tab {
+    position: relative;
+    z-index: 999;
+    cursor: pointer;
+    float: left;
+}
+
+.btn {
+    position: relative;
+    z-index: 990;
+    cursor: pointer;
+}
+
+/*.tab-button {*/
+/*    background-color: transparent;*/
+/*    border: none;*/
+/*    color: var(--text-color);*/
+/*    text-decoration: none;*/
+/*    font-weight: 500;*/
+/*    font-size: 1.25rem;*/
+/*    font-family: 'Jersey 10', sans-serif;*/
+/*    padding: 0;*/
+/*    margin-left: 1rem;*/
+/*    cursor: pointer;*/
+/*    transition: color 0.5s ease;*/
+/*    z-index: 999;*/
+/*}*/
+
+/*.tab-button:hover {*/
+/*    color: var(--secondary-color);*/
+/*}*/
+
+.hero-main-content {
+    text-align: center;
+    max-width: 800px;
+    padding: 2rem;
+}
+
 /* Footer styles */
 footer {
     padding: 2rem;
     text-align: center;
     background-color: var(--primary-color);
 }
+
+/* About styles */
+.about-content {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.about-image {
+    flex: 1;
+    display: flex;
+    justify-content: flex-start;
+    margin-right: 2rem;
+}
+
+.about-image img {
+    width: 200px;
+    height: 200px;
+    border-radius: 50%;
+    object-fit: cover;
+    border: 10px solid var(--text-color);
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+}
+
+.about-text {
+    flex: 2;
+    text-align: justify;
+}
+/* Writing styles */
 
 .writing-item {
     margin-bottom: 2rem;
@@ -195,33 +211,9 @@ footer {
     border: none;
 }
 
-.btn {
-    position: relative;
-    z-index: 1;
-}
 
-.tab {
-    position: relative;
-    z-index: 1;
-}
 
-.tab-button {
-    background-color: transparent;
-    border: none;
-    color: var(--text-color);
-    text-decoration: none;
-    font-weight: 500;
-    font-size: 1.25rem;
-    font-family: 'Jersey 10', sans-serif;
-    padding: 0;
-    margin-left: 1rem;
-    cursor: pointer;
-    transition: color 0.5s ease;
-}
 
-.tab-button:hover {
-    color: var(--secondary-color);
-}
 
 
 
