--- a/clean-website/style.css
+++ b/clean-website/style.css
@@ -8,11 +8,12 @@
 :root {
     --primary-color: #e6ffd6;
     --text-color: #3bb31e;
+    --hover-color: #FD7F17FF;
 }
 
 /* Global styles */
 body {
-    font-family: 'Jersey 10', sans-serif;
+    font-family: 'Jersey 15', sans-serif;
     line-height: 1.6;
     background-color: var(--primary-color);
     color: var(--text-color);
@@ -45,6 +46,11 @@ nav ul li a {
     text-decoration: none;
     font-weight: 500;
     font-size: 1.25rem;
+    font-family: "Jersey 10", sans-serif;
+}
+
+nav ul li a:hover {
+    color: var(--hover-color);
 }
 
 /*** Section styles ***/
@@ -81,6 +87,7 @@ nav ul li a {
     font-size: 4rem;
     margin-bottom: 1.5rem;
     text-align: center;
+    font-family: "Jersey 10", sans-serif;
 }
 
 .section h3 {
@@ -109,6 +116,7 @@ nav ul li a {
     text-align: center;
     max-width: 800px;
     padding: 2rem;
+    font-family: "Jersey 10", sans-serif;
 }
 
 .home-content h1 {
